--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "git.ignoreLimitWarning": true,
-    "editor.fontSize": 18.5,
-    "editor.fontFamily": "Courier New",
-    "editor.fontWeight": "100"
+    "editor.fontSize": 16,
+    "window.zoomLevel": -0.30,
+    "terminal.integrated.fontSize": 15.5,
+    "terminal.integrated.fontWeightBold": "normal",
+    "terminal.integrated.letterSpacing": 1
 }
